# market-dash

./: .gitignore  CLAUDE.md  README.md  app.py  backtester.py  config.py  data_fetcher.py  indicators.py  pyproject.toml  signals.py
.claude/: skills.md
static/: app.js  style.css
templates/: base.html  compare.html  dashboard.html  detail.html  strategy.html
