[project]
name = "market-dash"
version = "0.1.0"
description = "Daily market signals dashboard with technical analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=1.5.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.codespell]
skip = "*.pkl,cache/*,.git/*"
